2006/12/16
.updated CDvCodedText support regarding query

2006/12/18
.separated CDurationTest from BasicTypesTest
.updated CDuration parsing regarding months and weeks in ISO8601 DURATION format

2006/12/20
.added support for CDuration string pattern