@@ -7,3 +7,6 @@
 
 2006/12/20
 .added support for CDuration string pattern
+
+2006/12/24
+.added support for duration interval in CDuration parsing
